--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <header class="header">
         <header class="header-left">
-            <img src="/images/ph_shopping-cart-simple-thin.png" alt="" class="logo-shop">
+            <img src="images/coffee-landing-transformed copy 1.png" alt="" class="logo-shop">
             <img src="/images/Vector.png" alt="" class="logo-prof">
             <div class="shop">
                 <img class="btn-shop" src="/images/icons8-delete-48.png" alt="">
