--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     
     <header class="header">
         <header class="header-left">
-            <img src="images/coffee-landing-transformed copy 1.png" alt="" class="logo-shop">
-            <img src="/images/Vector.png" alt="" class="logo-prof">
+            <img src="images/ph_shopping-cart-simple-thin.png" alt="" class="logo-shop">
+            <img src="images/Vector.png" alt="" class="logo-prof">
             <div class="shop">
-                <img class="btn-shop" src="/images/icons8-delete-48.png" alt="">
+                <img class="btn-shop" src="images/icons8-delete-48.png" alt="">
                 <h2 class="title-shop">Your shops</h2>
              <div class="container-shop1">
-                <p class="product11"></p><img class="delete-icon-shop" src="/images/icons8-delete-30.png" alt="">
+                <p class="product11"></p><img class="delete-icon-shop" src="images/icons8-delete-30.png" alt="">
             </div>
             <div class="container-shop1">
-                <p class="product22"></p><img class="delete-icon-shop2" src="/images/icons8-delete-30.png" alt="">
+                <p class="product22"></p><img class="delete-icon-shop2" src="images/icons8-delete-30.png" alt="">
             </div>
                 <div class="container-shop1">
-                <p class="product33"></p><img class="delete-icon-shop3" src="/images/icons8-delete-30.png" alt="">
+                <p class="product33"></p><img class="delete-icon-shop3" src="images/icons8-delete-30.png" alt="">
             </div>
            
                 <button class="more-shop">for more information click</button>
