--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button class="more-shop">for more information click</button>
                 
             </div>
-            <img class="title-header" src="/images/elza coffee.png" alt="">
+            <img class="title-header" src="images/elza coffee.png" alt="">
             <p class="txt-header">Todays good mood is sponsored by coffee <br><br>search for your coffee now  </p>
             <button id="btnleft-header-left" class="btnleft-header"><span class="text-btn-header">Shop now</span></button>
             <button id="reserve-btn-header" class="btnleft-header"><span class="text-btn-header">Reserve a table now</span></button>
@@ -88,7 +88,7 @@
         <div class="part3">
 
             <div data-aos="zoom-in-down" class="left-part3">
-                <img src="/images/Reserve Img.png" alt="" class="image-Lpart3">
+                <img src="images/Reserve Img.png" alt="" class="image-Lpart3">
             </div>
             <div data-aos="zoom-in-down" class="right-part3">
                 <div class="inputs">
