--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header-left">
         <div class="btnn-left">
             <img src="images/ph_shopping-cart-simple-thin.png" alt="" class="logo-shop">
-            <img src= images/Vector.png" alt="" class="logo-prof">
+            <img src= "images/Vector.png" alt="" class="logo-prof">
         </div>
             <div class="shop">
                 <img class="btn-shop" src="images/icons8-delete-48.png" alt="">
@@ -147,7 +147,7 @@
         <div class="comment-box1">
             <h3 class="title-comments1">How to make a great coffee ?</h3>
             <p class="txt-comments1">Making a cup of coffee doesn't have to be complicated. Start by gathering your supplies: coffee grounds, water, and a French press, mug or other vessel. Next, measure out 2 tablespoons of ground coffee per 8 ounces of water. If you're using a French press </p>
-            <img class="img-comments" src= images/Frame555.png" alt="">
+            <img class="img-comments" src= "images/Frame555.png" alt="">
 
         </div>
         <div class="comment-box2">
