--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <h3 class="name-product">Caffee</h3>
                 <img src="images/Rectangle (no 2).png" alt="" class="image-items">
                 <br>
-                <img src= images/ph_shopping-cart-simple-thin.png" alt="" class="shop-logo-product">
+                <img src= "images/ph_shopping-cart-simple-thin.png" alt="" class="shop-logo-product">
             </div>
             </div>
             <div class="items">
